==> shawngao-org/cloud-lock-firmware/Drivers/IO/Src/rc522.c <==
#include "rc522.h"
#define   RC522_DELAY()  delay_us( 20 )

void SPI1_Init(void) {
    GPIO_InitTypeDef GPIO_InitStructure;
    SPI_HandleTypeDef SPI_Handler;
    __HAL_RCC_GPIOA_CLK_ENABLE();
    __HAL_RCC_GPIOB_CLK_ENABLE();
    __HAL_RCC_SPI1_CLK_ENABLE();

    // CS
    GPIO_InitStructure.Pin = GPIO_PIN_4;
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;         //推挽输出
    GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;         //IO口速度为50MHz
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);                     //根据设定参数初始化PF0、PF1

    // SCK
    GPIO_InitStructure.Pin = GPIO_PIN_5;
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;         //推挽输出
    GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;         //IO口速度为50MHz
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);

    // MISO
    GPIO_InitStructure.Pin = GPIO_PIN_6;
    GPIO_InitStructure.Mode = GPIO_MODE_INPUT;         //推挽输出
    GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;         //IO口速度为50MHz
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);

    // MOSI
    GPIO_InitStructure.Pin = GPIO_PIN_7;
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;         //推挽输出
    GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;         //IO口速度为50MHz
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);

    // RST
    GPIO_InitStructure.Pin = GPIO_PIN_0;
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;         //推挽输出
    GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;         //IO口速度为50MHz
    HAL_GPIO_Init(GPIOB, &GPIO_InitStructure);

    SPI_Handler.Instance = SPI1;
    SPI_Handler.Init.Direction = SPI_DIRECTION_2LINES;    //设置SPI单向或者双向的数据模式:SPI设置为双线双向全双工
    SPI_Handler.Init.Mode = SPI_MODE_MASTER;                                                                    //设置SPI工作模式:设置为主SPI
    SPI_Handler.Init.DataSize = SPI_DATASIZE_8BIT;                                                            //设置SPI的数据大小:SPI发送接收8位帧结构
    SPI_Handler.Init.CLKPolarity = SPI_POLARITY_HIGH;        //串行同步时钟的空闲状态为高电平
    // SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;
    // SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;																	//串行同步时钟的第一个跳变沿（下降）数据被采样
    SPI_Handler.Init.CLKPhase = SPI_PHASE_2EDGE;        //串行同步时钟的第二个跳变沿（上升）数据被采样
    SPI_Handler.Init.NSS = SPI_NSS_SOFT;                //NSS信号由硬件（NSS管脚）还是软件（使用SSI位）管理:内部NSS信号有SSI位控制
    // RC522 SPI通讯时钟周期最小为100ns	即频率最大为10MHZ
    // RC522 数据在下降沿变化
    SPI_Handler.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_256;        //定义波特率预分频的值:波特率预分频值为256、传输速率36M/256=140.625KHz
    SPI_Handler.Init.FirstBit = SPI_FIRSTBIT_MSB;                            //指定数据传输从MSB位还是LSB位开始:数据传输从MSB位开始
    SPI_Handler.Init.CRCPolynomial = 7;                                //CRC值计算的多项式
    HAL_SPI_Init(
            &SPI_Handler);                                                                                    //根据SPI_InitStruct中指定的参数初始化外设SPIx寄存器

    __HAL_SPI_ENABLE(&SPI_Handler); //使能SPI外设
}
